// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api entreprise can get entreprise data by name 1`] = `
[
  {
    "closed": false,
    "conventions": [],
    "id": 112277319,
    "label": "CORSO BALARD 75004 PARIS 4E ARRONDISSEMENT",
    "siret": "80258570300035",
    "type": "entreprise",
  },
  {
    "closed": false,
    "conventions": [
      {
        "active": true,
        "date_publi": "1997-12-07T00:00:00.000Z",
        "effectif": 580085,
        "etat": "VIGUEUR_ETEN",
        "id": "KALICONT000005635534",
        "mtime": 1562700340,
        "nature": "IDCC",
        "num": "1979",
        "shortTitle": "Hôtels Cafés Restaurants (Hcr)",
        "texte_de_base": "KALITEXT000005670044",
        "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
      },
    ],
    "id": 108527673,
    "label": "CORSO BALARD 75015 PARIS 15E ARRONDISSEMENT",
    "siret": "80258570300027",
    "type": "entreprise",
  },
]
`;

exports[`api entreprise can get entreprise data by siren and reuse memoized call from previous siret2idcc 1`] = `
[
  {
    "closed": false,
    "conventions": [
      {
        "active": true,
        "date_publi": "1997-12-07T00:00:00.000Z",
        "effectif": 580085,
        "etat": "VIGUEUR_ETEN",
        "id": "KALICONT000005635534",
        "mtime": 1562700340,
        "nature": "IDCC",
        "num": "1979",
        "shortTitle": "Hôtels Cafés Restaurants (Hcr)",
        "texte_de_base": "KALITEXT000005670044",
        "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
      },
    ],
    "id": 114711036,
    "label": "CORSO BALARD 75015 PARIS 15",
    "siret": "80258570300027",
    "type": "entreprise",
  },
  {
    "closed": false,
    "conventions": [],
    "id": 113238717,
    "label": "CORSO BALARD 75004 PARIS 4",
    "siret": "80258570300035",
    "type": "entreprise",
  },
  {
    "closed": true,
    "conventions": [],
    "id": 113118965,
    "label": "CORSO BALARD 75002 PARIS 2",
    "siret": "80258570300019",
    "type": "entreprise",
  },
]
`;

exports[`api entreprise can get entreprise data by siren and reuse memoized call from previous siret2idcc 2`] = `
[
  {
    "closed": false,
    "conventions": [
      {
        "active": true,
        "date_publi": "1997-12-07T00:00:00.000Z",
        "effectif": 580085,
        "etat": "VIGUEUR_ETEN",
        "id": "KALICONT000005635534",
        "mtime": 1562700340,
        "nature": "IDCC",
        "num": "1979",
        "shortTitle": "Hôtels Cafés Restaurants (Hcr)",
        "texte_de_base": "KALITEXT000005670044",
        "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
      },
    ],
    "id": 114711036,
    "label": "CORSO BALARD 75015 PARIS 15",
    "siret": "80258570300027",
    "type": "entreprise",
  },
  {
    "closed": false,
    "conventions": [],
    "id": 113238717,
    "label": "CORSO BALARD 75004 PARIS 4",
    "siret": "80258570300035",
    "type": "entreprise",
  },
  {
    "closed": true,
    "conventions": [],
    "id": 113118965,
    "label": "CORSO BALARD 75002 PARIS 2",
    "siret": "80258570300019",
    "type": "entreprise",
  },
]
`;

exports[`api entreprise can get entreprise data by siret and reuse memoized call from previous siret2idcc 1`] = `
[
  {
    "closed": false,
    "conventions": [
      {
        "active": true,
        "date_publi": "1997-12-07T00:00:00.000Z",
        "effectif": 580085,
        "etat": "VIGUEUR_ETEN",
        "id": "KALICONT000005635534",
        "mtime": 1562700340,
        "nature": "IDCC",
        "num": "1979",
        "shortTitle": "Hôtels Cafés Restaurants (Hcr)",
        "texte_de_base": "KALITEXT000005670044",
        "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
      },
    ],
    "id": 113238717,
    "label": "CORSO BALARD 75004 PARIS 4",
    "siret": "80258570300035",
    "type": "entreprise",
  },
]
`;

exports[`api entreprise can get entreprise data by siret and reuse memoized call from previous siret2idcc 2`] = `
[
  {
    "closed": false,
    "conventions": [
      {
        "active": true,
        "date_publi": "1997-12-07T00:00:00.000Z",
        "effectif": 580085,
        "etat": "VIGUEUR_ETEN",
        "id": "KALICONT000005635534",
        "mtime": 1562700340,
        "nature": "IDCC",
        "num": "1979",
        "shortTitle": "Hôtels Cafés Restaurants (Hcr)",
        "texte_de_base": "KALITEXT000005670044",
        "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
      },
    ],
    "id": 113238717,
    "label": "CORSO BALARD 75004 PARIS 4",
    "siret": "80258570300035",
    "type": "entreprise",
  },
]
`;

exports[`api entreprise strip accents 1`] = `
[
  {
    "closed": false,
    "conventions": [],
    "id": 112277319,
    "label": "CORSO BALARD 75004 PARIS 4E ARRONDISSEMENT",
    "siret": "80258570300035",
    "type": "entreprise",
  },
  {
    "closed": false,
    "conventions": [
      {
        "active": true,
        "date_publi": "1997-12-07T00:00:00.000Z",
        "effectif": 580085,
        "etat": "VIGUEUR_ETEN",
        "id": "KALICONT000005635534",
        "mtime": 1562700340,
        "nature": "IDCC",
        "num": "1979",
        "shortTitle": "Hôtels Cafés Restaurants (Hcr)",
        "texte_de_base": "KALITEXT000005670044",
        "title": "Convention collective nationale des hôtels, cafés restaurants (HCR) du 30 avril 1997",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635534",
      },
    ],
    "id": 108527673,
    "label": "CORSO BALARD 75015 PARIS 15E ARRONDISSEMENT",
    "siret": "80258570300027",
    "type": "entreprise",
  },
]
`;
